<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvBienvenidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/tvBienvenidos"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/tvNombreEmpresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBienvenidos"
        android:layout_centerHorizontal="true"
        android:text="@string/tvNombreEmpresa"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvBienvenidos"
        android:layout_alignRight="@id/tvBienvenidos"
        android:layout_below="@+id/rgOpciones"
        android:layout_marginTop="30dp" >

        <Button
            android:id="@+id/btnAlta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAlta"
            android:onClick="alta" />

        <Button
            android:id="@+id/btnBaja"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnBaja"
            android:onClick="baja" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvBienvenidos"
        android:layout_alignRight="@id/tvBienvenidos"
        android:layout_below="@+id/linearLayout1" >

        <Button
            android:id="@+id/btnModificacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnModificacion"
            android:onClick="modificacion" />

        <Button
            android:id="@+id/btnConsulta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnConsulta"
            android:onClick="consulta" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgOpciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNombreEmpresa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/rbPropietarios" >

        <RadioButton
            android:id="@+id/rbPropietarios"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/rbPropietarios" />

        <RadioButton
            android:id="@+id/rbCoches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbCoches" />
    </RadioGroup>

</RelativeLayout>
