<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="40dp"
        android:text="@string/tvMatricula"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etMatricula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvMatricula"
        android:layout_below="@id/tvMatricula"
        android:ems="10"
        android:inputType="text|textCapCharacters" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etMatricula"
        android:layout_below="@+id/etMatricula"
        android:layout_marginTop="20sp"
        android:text="@string/tvMarca"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etMarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvMarca"
        android:layout_below="@id/tvMarca"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/tvPotencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etMarca"
        android:layout_marginTop="20dp"
        android:layout_below="@id/etMarca"
        android:text="@string/tvPotencia"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etPotencia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tvPotencia"
        android:layout_below="@id/tvPotencia"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tvDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/etPotencia"
        android:layout_marginTop="26dp"
        android:layout_below="@id/etPotencia"
        android:text="@string/tvDNI"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spDNI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvDNI"
        android:layout_below="@+id/tvDNI" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/spDNI"
        android:layout_marginTop="40dp"
        android:layout_alignRight="@id/etMatricula"
        android:layout_below="@id/spDNI" >

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAceptar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancelar"
            android:onClick="cancelar" />
    </LinearLayout>

</RelativeLayout>
